--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compgetiler.target>19</maven.compgetiler.target>
+        <junit.version>4.13.2</junit.version>
     </properties>
 
     <version>1.0-SNAPSHOT</version>
@@ -20,7 +21,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
